# rust-code-analysis

./: .gitignore  404.html  Cargo.toml  Makefile  index.html  languages.html  metrics.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: ci.yml  release.yml
commands/: index.html  metrics.html  nodes.html  rest.html
developers/: index.html  loc.html  new-language.html  update-grammars.html
enums/: Cargo.toml
enums/src/: languages.rs  macros.rs
rust-code-analysis-cli/: Cargo.toml
rust-code-analysis-cli/src/: main.rs
src/: alterator.rs  asttools.rs  checker.rs  getter.rs  langs.rs  lib.rs  macros.rs  node.rs  parser.rs  tools.rs  traits.rs
src/languages/: language_ccomment.rs  language_cpp.rs  language_java.rs  language_javascript.rs  language_kotlin.rs  language_mozjs.rs  language_preproc.rs  language_python.rs  language_rust.rs  language_tsx.rs  language_typescript.rs
src/metrics/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  loc.rs  nargs.rs  nom.rs  npa.rs  npm.rs  wmc.rs
tree-sitter-ccomment/: Cargo.toml
tree-sitter-mozcpp/: Cargo.toml
tree-sitter-mozcpp/bindings/rust/: README.md
tree-sitter-mozjs/: Cargo.toml  package.json
tree-sitter-mozjs/bindings/rust/: README.md
tree-sitter-mozjs/src/: parser.c
tree-sitter-preproc/: Cargo.toml  package.json
tree-sitter-preproc/bindings/rust/: README.md
tree-sitter-preproc/src/: parser.c
