[package]
name = "enums"
version = "0.0.1"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2024"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
askama = "^0.14"

tree-sitter = "=0.26.3"
tree-sitter-java = "=0.23.5"
tree-sitter-kotlin-codanna = "=0.3.9"
tree-sitter-typescript = "=0.23.2"
tree-sitter-javascript = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.0"
tree-sitter-preproc = { path = "../tree-sitter-preproc", version = "=0.20.4" }
tree-sitter-ccomment = { path = "../tree-sitter-ccomment", version = "=0.20.4" }
tree-sitter-mozcpp = { path = "../tree-sitter-mozcpp", version = "=0.20.5" }
tree-sitter-mozjs = { path = "../tree-sitter-mozjs", version = "=0.20.4" }

[profile.release]
strip = "debuginfo"
